--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,20 @@
 		},
 		{
 			"name": "James Montalvo",
-			"role": "Current developer"
+			"role": "Developer"
 		}
 	],
-	"support": {
-		"issues": "https://bugzilla.wikimedia.org/",
-		"github": "https://github.com/enterprisemediawiki/HeaderFooter/issues"
+	"require-dev": {
+		"mediawiki/mediawiki-phan-config": "^0.12.0",
+		"mediawiki/mediawiki-codesniffer": "^41.0",
+		"mediawiki/minus-x": "^1.1"
 	},
-	"require": {
-		"composer/installers": ">=1.0.1"
-	},
-	"autoload": {
-		"files": ["HeaderFooter.php"]
+	"scripts": {
+		"phpcs": "phpcs -sp",
+		"test": [
+			"minus-x check .",
+			"@phpcs"
+		],
+		"phan": "phan -d . --long-progress-bar"
 	}
 }
